Make the fish swim around the screen

--- a/ecosystem/index.html
+++ b/ecosystem/index.html
@@ -3,10 +3,9 @@
 <head>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
     <script type="text/javascript" src="ecosystem.js"></script>
-    <title>Ecosystm</title>
+    <title>Ecosystem</title>
     <style>
         html,body{margin:0;padding:0;}
-        body{background-color:black;}
         canvas{display:block;}
     </style>
 </head>
