Add Ch. 3 Oscillation

--- a/index.html
+++ b/index.html
@@ -11,13 +11,63 @@
     <section>
 
     <h1>Nature of Code Examples</h1>
+    <h2><a href="ecosystem/index.html">Ecosystem Project</a></h2>
+
     <ul>
-        <li><a href="00introduction/index.html">Introduction</a></li>
-        <li><a href="01vectors/index.html">Ch. 1 Vectors</a></li>
-        <li><a href="02forces/index.html">Ch. 2 Forces</a></li>
+        <li><h2>Introduction</h2>
+            <ul>
+                <li><a href="00introduction/walker/">Walker</a></li>
+                <li><a href="00introduction/perlin/">Perlin Noise</a></li>
+                <li><a href="00introduction/splat/">Splat</a></li>
+                <li><a href="00introduction/mosaic/">Mosaic</a></li>
+            </ul>
+        </li>
+
+        <li><h2>Ch. 1 Vectors</h2>
+            <ul>
+                <li><a href="01vectors/mover.html">Mover</a></li>
+                <li><a href="01vectors/bounce.html">Bounce</a></li>
+                <li><a href="01vectors/sphere.html">Sphere</a></li>
+                <li><a href="01vectors/vectors.html">Vectors</a></li>
+            </ul>
+        </li>
+
+        <li><h2>Ch. 2 Forces</h2>
+            <ul>
+                <li><a href="02forces/mover.html">Mover</a></li>
+                <li><a href="02forces/gravity.html">Gravity</a></li>
+                <li><a href="02forces/ball.html">Ball</a></li>
+                <li><a href="02forces/balloon.html">Balloon</a></li>
+                <li><a href="02forces/allattractors.html">All Attractors</a></li>
+            </ul>
+        </li>
+
+        <li><h2>Ch. 3 Oscillation</h2>
+            <ul>
+                <li><a href="03oscillation/baton.html">Baton</a></li>
+            </ul>
+        </li>
+
+        <li><h2>Ch. 4 Particle Systems</h2>
+        </li>
+
+        <li><h2>Ch. 6 Autonomous Agents</h2>
+        </li>
+
+        <li><h2>Ch. 7 Cellular Automata</h2>
+        </li>
+
+        <li><h2>Ch. 8 Fractals</h2>
+        </li>
+
+        <li><h2>Ch. 9 The Evolution of Code</h2>
+        </li>
+
+        <li><h2>Ch. 10 Neural Networks</h2>
+        </li>
+
     </ul>
-    <a href="ecosystem/index.html">Ecosystem Project</a>
-    
+
     </section>
 </body>
 </html>
