Add cannon example

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         <li><h2>Ch. 3 Oscillation</h2>
             <ul>
                 <li><a href="03oscillation/baton.html">Baton</a></li>
+                <li><a href="03oscillation/mover.html">Mover</a></li>
+                <li><a href="03oscillation/cannon.html">Cannon</a></li>
             </ul>
         </li>
 
