Add car example

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
             <ul>
                 <li><a href="03oscillation/baton.html">Baton</a></li>
                 <li><a href="03oscillation/mover.html">Mover</a></li>
+                <li><a href="03oscillation/mover2.html">Mover2</a></li>
                 <li><a href="03oscillation/cannon.html">Cannon</a></li>
+                <li><a href="03oscillation/car.html">Car</a></li>
             </ul>
         </li>
 
