Add spiral example

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <li><a href="03oscillation/mover2.html">Mover2</a></li>
                 <li><a href="03oscillation/cannon.html">Cannon</a></li>
                 <li><a href="03oscillation/car.html">Car</a></li>
+                <li><a href="03oscillation/spiral.html">Spiral</a></li>
             </ul>
         </li>
 
