Add bob and oscillation examples

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <li><a href="03oscillation/cannon.html">Cannon</a></li>
                 <li><a href="03oscillation/car.html">Car</a></li>
                 <li><a href="03oscillation/spiral.html">Spiral</a></li>
+                <li><a href="03oscillation/spaceship.html">Spaceship</a></li>
+                <li><a href="03oscillation/oscillation.html">Oscillation</a></li>
+                <li><a href="03oscillation/bob.html">Bob on a Spring</a></li>
             </ul>
         </li>
 
