Add wave example

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <li><a href="03oscillation/spaceship.html">Spaceship</a></li>
                 <li><a href="03oscillation/oscillation.html">Oscillation</a></li>
                 <li><a href="03oscillation/bob.html">Bob on a Spring</a></li>
+                <li><a href="03oscillation/wave.html">Wave</a></li>
             </ul>
         </li>
 
