Add pendulum example

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <li><a href="03oscillation/oscillation.html">Oscillation</a></li>
                 <li><a href="03oscillation/bob.html">Bob on a Spring</a></li>
                 <li><a href="03oscillation/wave.html">Wave</a></li>
+                <li><a href="03oscillation/pendulum.html">Pendulum</a></li>
             </ul>
         </li>
 
