Add group stats

--- a/osmosis/index.html
+++ b/osmosis/index.html
@@ -10,6 +10,17 @@
     <div class="container">
         <div class="stats">
             <p><span id="statsLeft">0</span> : <span id="statsRight">0</span></p>
+            <table>
+                <tr><th colspan="2">Group Stats</th></tr>
+                <tr>
+                    <th>Red:</th>
+                    <td id="redStats"></td>
+                </tr>
+                <tr>
+                    <th>Blue:</th>
+                    <td id="blueStats"></td>
+                </tr>
+            </table>
         </div>
         <div id="canvas-wrapper" class="main"></div>
         <div class="settings">
